@@ -36,6 +36,11 @@
             <version>21.0.6</version>
         </dependency>
         <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>21.0.6</version>
+        </dependency>
+        <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>9.3.0</version>
@@ -51,9 +56,19 @@
             <version>2.0.3</version>
         </dependency>
         <dependency>
+            <groupId>com.openhtmltopdf</groupId>
+            <artifactId>openhtmltopdf-pdfbox</artifactId>
+            <version>1.0.10</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.sarxos</groupId>
             <artifactId>webcam-capture</artifactId>
             <version>0.3.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.5.10</version>
         </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
@@ -140,6 +155,10 @@
                 <version>3.13.0</version>
                 <configuration>
                     <release>17</release>
+                    <compilerArgs>
+                        <arg>--add-reads</arg>
+                        <arg>com.santea.javafxapp=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -153,9 +172,15 @@
                         <configuration>
                             <mainClass>com.santea.Launcher</mainClass>
                             <options>
+                                <option>-Xms128m</option>
+                                <option>-Xmx512m</option>
+                                <option>-XX:+UseG1GC</option>
+                                <option>-XX:MaxRAMPercentage=55</option>
+                                <option>-Dprism.order=sw</option>
+                                <option>-Dsun.java2d.xrender=false</option>
                                 <option>--enable-native-access=ALL-UNNAMED</option>
                                 <option>--enable-native-access=javafx.graphics</option>
-                                <option>--sun-misc-unsafe-memory-access=allow</option>
+                                <option>--add-reads=com.santea.javafxapp=ALL-UNNAMED</option>
                             </options>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
